feat: adds interstitial

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <app-root class="container-fluid"></app-root>
+  <app-root class="container-fluid">
+    <div background-color="black">
+      <img src="assets/interstitial.gif" />
+    </div>
+  </app-root>
 </body>
 </html>
